********************************************************************************
11/16/2011 Version 3.03.00 (Beta)
* Fixed improper placement of a comma at the end of the C/C++ enum list - Andrea Zanellato.
+ Added support for wxWizard - Andrea Zanellato.
+ Added support for PHP code generation - JGM.
^ Combo box component (wxComboBox) now supports value change from visual designer.

11/08/2011 Version 3.02.03 (Beta)
* Several toolbars can be inserted directly into AUI-managed frames.
+ Added "Load From Embedded File" for bitmap properties.
* Added missing import for wx.aui.AuiToolBar class.
+ Added support for wxArtProvider.
+ Added support for drop-down menus in wxAuiToolBar - Andrea Zanellato.
* Fixed handling of "moveable" AUI property.
+ XRCID() macro can be used as a widget ID.
^ Upgraded to use new wxPropertyGrid control.
* Fixed C++ code generation for drop-down menus assigned to AUI toolbar's tools.
^ wxFB project version increased to 1.11 due to different format of bitmap properties.

03/22/2011 Version 3.02.02 (Beta)
* Fixed positioning of status bar on AUI-managed frame.
* Fixed centering of frame/dialog which is managed by AUI.
^ Improved and fixed components' inheritance definition.
* Fixed doubled setup code for wxBitmapButton (and potentialy for all components
  with multiple inheritance).
^ Number of rows in wxGridSizer and wxFlexGridSizer is set to '0' by default which
  means that the correct rows number will be calculated by wxWidgets itself.
* wxGridBagSizer can be added directly to a frame/dialog/panel.
* Fixed code generation of empty wxCheckListBox in Python.
^ Also following widgets can be placed directly into AUI-managed frame:
  wxNotebook, wxAuiNotebook, wxFlatNotebook, wxListbook, wxChoicebook, wxTreeListCtrl
  and wxSplitterWindow.
^ AUI-managed frames can handle also AUI events.
^ Added "best_size", "min_size" and "max_size" AUI properties.
^ XRC preview is disabled for AUI-managed frames.

11/02/2010 Version 3.02.01 (Beta)