@@ -71,13 +71,14 @@
   </objtype>
 
     <objtype name="wizard">
-        <childtype name="WizardPageSimple"/>
+        <childtype name="wizardpagesimple"/>
         <childtype name="menu" nmax="1" />
     </objtype>
 
-    <objtype name="WizardPageSimple">
+    <objtype name="wizardpagesimple">
         <childtype name="sizer" nmax="1" />
-        <childtype name="menu"  nmax="1" />
+        <childtype name="gbsizer" nmax="1" />
+        <childtype name="menu" nmax="1" />
     </objtype>
 
   <objtype name="menubar_form">
@@ -105,6 +106,7 @@
 
   <objtype name="container">
     <childtype name="sizer" nmax="1" aui_nmax="1" />
+    <childtype name="gbsizer" nmax="1" aui_nmax="1" />
     <childtype name="menu" nmax="1" aui_nmax="1" />
   </objtype>
 
