@@ -299,7 +299,7 @@ PObjectBase TemplateParser::GetWxParent()
 	candidates.push_back( m_obj->FindNearAncestor( wxT("choicebook") ) );
 	candidates.push_back( m_obj->FindNearAncestor( wxT("auinotebook") ) );
 	candidates.push_back( m_obj->FindNearAncestor( wxT("toolbar") ) );
-	candidates.push_back( m_obj->FindNearAncestor( wxT("WizardPageSimple") ) );
+	candidates.push_back( m_obj->FindNearAncestor( wxT("wizardpagesimple") ) );
 
 	for ( size_t i = 0; i < candidates.size(); i++ )
 	{
